# microscope

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .secrets.baseline  DECISIONS.md  LICENSE  README.md  pyproject.toml
configs/: circuit_discovery.yaml  sae_gemma2_2b.yaml
notebooks/: circuit_analysis.ipynb  feature_visualization.ipynb
scripts/: analyze_features.sh  discover_circuits.sh  setup_env.sh  train_sae.sh  train_sae_random_baseline.sh  upload_to_hub.sh
src/microscope/: __init__.py
src/microscope/circuits/: __init__.py  activation_patching.py  ioi_dataset.py  ioi_metric.py  relp_wrapper.py
src/microscope/sae/: __init__.py  feature_analysis.py  feature_viz.py  trainer.py
src/microscope/sanity_checks/: __init__.py  random_baseline.py
src/microscope/utils/: __init__.py  hooks.py
tests/: conftest.py  test_activation_patching.py  test_ioi_metric.py  test_random_baseline.py  test_sae_trainer.py
