[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microscope"
version = "0.1.0"
requires-python = ">=3.11, <3.12"
dependencies = [
    "torch==2.5.1",
    "transformer-lens==2.8.0",
    "saelens==5.3.0",
    "nnsight==0.3.9",
    "transformers==4.47.0",
    "accelerate==1.2.0",
    "datasets==3.2.0",
    "safetensors==0.4.5",
    "huggingface-hub==0.27.0",
    "numpy==1.26.4",
    "scipy==1.14.1",
    "scikit-learn==1.6.1",
    "pandas==2.2.3",
    "PyYAML==6.0.2",
]

[project.optional-dependencies]
train  = ["wandb==0.19.1"]
viz    = ["matplotlib==3.9.4", "seaborn==0.13.2"]
dev    = ["ruff", "mypy", "pytest", "pytest-cov", "nbstripout", "pre-commit"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
